--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -3,31 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="../public/home.css" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/public/modHome.css">
     <title>Home</title>
 </head>
 <body>
     <header>
         <%- include('partials/navbar') %>
     </header>
-
     <ul class="DMs">
         <h2>Messages</h2>
-        <li>
-            <img src="/Prototype/images/blank-pf.png" alt="profile-pic">
+        <li class="notifications">
+            <img src="/images/blank-pf.png" alt="profile-pic">
             <a href="#">UserName</a>
             <p> # of new notifications</p>
 
         </li>
-        <li>
-            <img src="/Prototype/images/blank-pf.png" alt="profile-pic">
+        <li class="notifications">
+            <img src="/images/blank-pf.png" alt="profile-pic">
             <a href="#">UserName</a>
             <p> # of new notifications</p>
 
         </li>
-        <li>
-            <img src="/Prototype/images/blank-pf.png" alt="profile-pic">
+        <li class="notifications">
+            <img src="/images/blank-pf.png" alt="profile-pic">
             <a href="#">UserName</a>
             <p> # of new notifications</p>
 
