--- a/Prototype/views/login.ejs
+++ b/Prototype/views/login.ejs
@@ -9,7 +9,7 @@
     <title>Login</title>
 </head>
 
-<body class=>
+<body >
     <!-- Page Filler -->
     <div class=" split filler">
 
@@ -18,7 +18,7 @@
     <!-- Login Form -->
     <div class="split login">
         <div class="login-content">
-            <h1 class="login-title">Spartan-Aid</h2>
+            <h1 class="login-title">Spartan-Aid</h1>
                 <img class="spartan" src="../images/Spartan.png" alt="spartan">
             <p style="font-weight: bold;">Enter login details below:</p>
 
