--- a/Prototype/views/signup.ejs
+++ b/Prototype/views/signup.ejs
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../public/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Sign up</title>
+    <style>
+        body {
+            font-family: "Times New Roman", Times, serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,12 +20,12 @@
 
     </div>
 
-    <!-- Login Form -->
+    <!-- signup Form -->
     <div class="split signup-info">
 
         <div class="login-content">
-            <div><button class="back-button" onclick="history.back()">Back</button></div>
-            <h1 class="login-title">Sign Up</h2>
+            <div><button class="btn btn-secondary" onclick="window.location.href='/'">Back</button></div>
+            <h1 class="login-title">Sign Up</h1>
                 <img class="spartan" src="../images/Spartan.png" alt="Spartan">
                 <p style="font-weight: bold;">Enter sign up information below:</p>
 
@@ -69,6 +75,8 @@
                         return true;
                     }
                 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
