--- a/Prototype/views/teacherResources.ejs
+++ b/Prototype/views/teacherResources.ejs
@@ -19,7 +19,7 @@
             <div id="resources-content">
                 <h2>Your posted Resources</h2>
                 <% if (!resources || resources.length === 0) { %>
-                    <h2>No resources found, be the first to make one!</h2>
+                    <h2>No resources found, you haven't published any yet.</h2>
                 <% } else { %>
                     <% resources.forEach(resource => { %>
                         <div class="resource">
