--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -50,6 +50,7 @@
                                         <%= post.title %>
                                     </h2>
                                     <h4>By:  <%= post.email %> Course:<%= post.courseId %> </h4>
+
                                     <div class="delete-button">
                                         <% if (userId === post.userId || role === 'teacher' || role === 'moderator') { %>
                                             <form action="/deletePost" method="POST" class="ms-4">
@@ -74,6 +75,12 @@
                                             <div class="text-muted small">0 comments</div>
                                         </div>
                                         <div class="d-flex align-items-center me-4">
+                                            <div class="message-button"></div>
+                                            <form action="/createConv" method="POST" class="ms-4">
+                                                <input type="hidden" id="userId2" value="<%= post.userId %>" name="userId2">
+                                                <button type="submit" class="btn btn-primary">Message</button>
+                                            </form>
+                                    </div>
                                             <button type="submit" id="likeButton"
                                                 class="btn btn-link p-0 border-0 me-2" onclick="toggleLike(event)">
                                                 <input type="hidden" name="postId" value="<%= post.postId %>">
