--- a/Prototype/views/partials/navbar.ejs
+++ b/Prototype/views/partials/navbar.ejs
@@ -16,9 +16,9 @@
             <li><a href="/modHome"><h2>Spartan Aid</h2></a></li>
             <li><a href="/modMessages"><h2>Messages</h2></a></li>
             <li><a href="/account"><h2>Account</h2></a></li>
-            <li><a href="modUsers.html"><h2>Users</h2></a></li>
-            <li><a href="modPosts.html"><h2>Posts</h2></a></li>
-            <li><a href="modTutor.html"><h2>Tutors</h2></a></li>
+            <li><a href="/modUsers"><h2>Users</h2></a></li>
+            <li><a href="/modPosts"><h2>Posts</h2></a></li>
+            <li><a href="/modTutor"><h2>Tutors</h2></a></li>
             <li><a href="/logout"><h2>Logout</h2></a></li>
         <% } else if (role === 'student') { %>
             <li><img src="/images/Spartan.png" alt="spartan" class="spartan-image" width="150"></li>
