--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/public/feed.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/public/home.css">
     <title>Home</title>
 </head>
@@ -28,8 +28,7 @@
                 <% convUsers.forEach(user => { %>
                     <li class="user-info">
                         <a href="/account/<%= user.otherUser.userId %>">
-                            <img src="/images/blank-pf.png" class="rounded-circle" alt="profile" size="50" height="50"
-                                width="50">
+                            <img src="/images/<%= user.otherUser.profilePic %>" class="rounded-circle" alt="profile" height="40">
                             <span><%= user.otherUser.fname + " " + user.otherUser.lname %></span>
                         </a>
                         <span> <%= user.unreadCount %> unread messages</span>
