--- a/Prototype/public/modUsers.css
+++ b/Prototype/public/modUsers.css
@@ -130,7 +130,8 @@ header {
 
 .flaggedUser, .user{
     display: flex;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
+    align-items: center;
     border: solid 2px black;
     margin: 10px;
     text-decoration: none;
@@ -144,12 +145,20 @@ header {
 }
 
 .flaggedUser button{
-    display: inline-block;
     padding: 5px 10px;
     font-size: 15px;
     border-radius: 5px;
-    background-size: cover;
     text-align: center;
     right: 0;
-    align-self:center;
+}
+
+.flagUser{
+    padding: 10px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.userName{
+    display: flex;
+    justify-content: space-evenly;
 }
