--- a/Prototype/views/modMessages.ejs
+++ b/Prototype/views/modMessages.ejs
@@ -63,12 +63,18 @@
                 <% }) %>
             <% } %>
         </div>
+    <div>
         <form action="/sendMessage?convId=<%= convId %>" method="POST" class="messageContainer">
             <input type="text" class="messageBox" name="message" placeholder="Write Message" required>
             <input type="hidden" name="userId" value="<%= userId %>">
             <button type="submit" class="sendBtn">SEND</button>
             <button type="button" class="sendBtn" data-bs-toggle="modal" data-bs-target="#postModal">Create Calendar</button>
         </form>
+        <!-- <form action="/reviewPage" method="POST">
+            <input type="hidden" name="convId" value="<%= convId %>">
+            <input type="hidden" name="userId2" value="<%= userId2 %>"/>
+            <button type="submit" class="sendBtn">Review</button>
+          </form> -->
     </div>
     <div class="formContainer">
         <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
