--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -32,7 +32,7 @@
                     </div>
                 <% } %>
                 <div>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#postModal">
+                    <button type="button" id="postButton" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#postModal">
                         Post
                     </button>
                 </div>
