--- a/Prototype/views/reviewPage.ejs
+++ b/Prototype/views/reviewPage.ejs
@@ -36,7 +36,10 @@
                     <input type="radio" id="recommend2" name="recommended" value="No" required>
                     <label for="recommend2">No</label>
                 </div>
-                <button class="btn btn-primary">Submit</button>
+                <div>
+                    <button class="btn btn-secondary" onclick="history.back()">Back</button>
+                    <button class="btn btn-primary">Submit</button>
+                </div>
             </form>
 
         </div>
