--- a/Prototype/public/account.css
+++ b/Prototype/public/account.css
@@ -1,3 +1,7 @@
+img {
+   cursor: pointer; 
+}
+
 .columns {
     display: flex;
     flex-direction: column;
@@ -11,7 +15,19 @@
     margin: 0 auto; 
 }
 
-#posts h1 {
+#header {
+    text-align: center;
     background-color: rgb(219, 128, 8);
     
+    
+}
+
+#reviews h1 {
+    background-color: rgb(219, 128, 8);
+}
+
+#userProfile {
+    padding: 5px;
+    border: 2px solid rgb(121, 118, 118);
+    border-radius: 10px;
 }
