--- a/Prototype/views/account.ejs
+++ b/Prototype/views/account.ejs
@@ -33,6 +33,9 @@
             <br><br><h2><%= user.fname + " " + user.lname %></h2>
             <h4>Role: <%= user.role %></h3>
             <h4>Email: <%= user.email %></h3>
+            <% if (averageRating) { %>
+                <h4>Rating: <%= averageRating %> / 10</h3>
+            <% } %>
             <% if (user.bio) { %>
                 <h4 style="border-bottom: 1px solid black;">About Me</h4>
                 <p><%= user.bio %></p>
@@ -50,7 +53,11 @@
             
         </div>
         <div id="posts">
-            <h1>Posts Made</h1>
+            <div id="header" class="d-flex justify-content-center align-items-center">
+                <img src="/images/leftArrow.png" alt="Account" width="50" onclick="toggleAccountView('resources')">
+                <h1 class="mb-0 ms-5 me-5">Posts Made</h1>
+                <img src="/images/rightArrow.png" alt="Resources" width="45" onclick="toggleAccountView('resources')">
+            </div>
             <div id="userPosts">
                 <% userPosts.forEach(post => { %>
                 <div class="card">
@@ -94,6 +101,38 @@
                     
                     
         </div>
+
+        <div id="reviews" style="display: none;">
+            <div id="header" class="d-flex justify-content-center align-items-center">
+                <img src="/images/leftArrow.png" alt="Account" width="50" onclick="toggleAccountView('posts')">
+                <h1 class="mb-0 ms-5 me-5">Reviews</h1>
+                <img src="/images/rightArrow.png" alt="Resources" width="45" onclick="toggleAccountView('posts')">
+            </div>
+            <div id="userReviews">
+                <% reviews.forEach(review => { %>
+                <div class="card">
+                    <div class="d-flex justify-content-between">
+                        <h2 class="ms-3"><%= review.title %></h4>
+                        <h2 class="me-5">Review rating: <%= review.rating %></h4>
+                    </div>
+                    <div class="card-body" >
+                        <p><%= review.description %></p>
+                        <em>Recommended: <%= review.recommended %></em>
+                        <div class="d-flex justify-content-end align-items-center me-4" >
+                            <a href="/account/<%= review.userId %>" id="userProfile">
+                                <img src="/images/<%= review.profilePic %>" class="rounded-circle" alt="profile" height="40" style="margin-right: 15px;">
+                                <h3 style="display: inline;"><%= review.fname + " " + review.lname %></h3>
+                            </a>
+                        </div>
+                    </div>    
+                </div>    
+                <% }); %>
+            </div>
+        </div>
+
+
+    </div>
+
     
 
 </body>
