--- a/Prototype/public/message.css
+++ b/Prototype/public/message.css
@@ -70,6 +70,15 @@ header {
     padding-top: 75px;
 }
 
+#feed, #private-messages {
+    flex: 1;
+    margin: 0 10px;
+    /* margin-inline-start: 12%; */
+}
+
+#feed {
+    flex: 2;
+}
 
 .subjects li a{
     display: block;
@@ -121,6 +130,15 @@ header {
     display: flex;
     justify-content: space-between;
     margin-inline-start: 12%;
+}
+
+.user-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .search {
