--- a/Prototype/public/message.css
+++ b/Prototype/public/message.css
@@ -147,8 +147,31 @@ header {
 }
 
 .user-card{
-    border: 2px solid black;
-    text-align: center;
+    border-bottom: 2px solid lightgrey;
+    margin-bottom: 8px;
+}
+
+.user-card-info {
+    font-size: 14px;
+}
+
+.user-name {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 0;
+}
+
+.user-name p {
+    margin: 0;
+}
+
+.user-email {
+    text-align: left;
+    font-weight: lighter;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
 }
 
 .user-card h2{
@@ -157,11 +180,10 @@ header {
 
 .role-box {
     border-radius: 5px;
-    width: auto;
-    text-align: center;
+    padding: 2px 5px;
     display: inline-block;
-    margin: 0 auto;
-    padding: 5px;
+    vertical-align: middle;
+    height: auto; 
 }
 
 .tutor-role {
